--- a/profile/index.html
+++ b/profile/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>[YOUR NAME] | Final-year BIT Student</title>
+  <title>Thulisile Maluleke | Final-year BIT Student</title>
   <link rel="stylesheet" href="styles.css" />
-  <meta name="description" content="Professional profile of [YOUR NAME], final-year Bachelor of Information Technology student.">
+  <meta name="description" content="Professional profile of Thulisile Maluleke, final-year Bachelor of Information Technology student.">
 </head>
 <body>
   <header class="container">
     <div class="profile-header">
       <div class="avatar" aria-hidden="true">YN</div>
       <div>
-        <h1 id="name">[YOUR NAME]</h1>
+        <h1 id="name">Thulisile Maluleke</h1>
         <p id="tagline">Final-year Bachelor of Information Technology (BIT) Student</p>
         <ul class="contact">
-          <li><a id="email" href="mailto:you@example.com">you@example.com</a></li>
-          <li><a id="phone" href="tel:+1234567890">+1 234 567 890</a></li>
-          <li><span id="location">City, Country</span></li>
-          <li><a id="portfolio" href="https://your-portfolio.com" target="_blank" rel="noopener">Portfolio</a></li>
+          <li><a id="email" href="mailto:you@example.com">s225166097@mandela.ac.za</a></li>
+          <li><a id="phone" href="tel:+1234567890">+27 66 216 1004</a></li>
+          <li><span id="location">Port Elizabeth, South Africa</span></li>
+          
           <li><a id="github" href="https://github.com/yourhandle" target="_blank" rel="noopener">GitHub</a></li>
-          <li><a id="linkedin" href="https://www.linkedin.com/in/yourhandle" target="_blank" rel="noopener">LinkedIn</a></li>
+          <li><a id="linkedin" href="https://www.linkedin.com/in/yourhandle" target="_blank" rel="noopener">https://www.linkedin.com/in/thulisile-maluleke-9a407035a/</a></li>
         </ul>
       </div>
     </div>
@@ -48,13 +48,13 @@
       <h2>Education</h2>
       <article class="item">
         <div class="item-header">
-          <h3 id="degree">B.I.T., [University Name]</h3>
+          <h3 id="degree">B.I.T., [Nelson Mandela University</h3>
           <span class="meta"><time id="edu-start">2022</time> – <time id="edu-end">Present</time></span>
         </div>
         <p id="edu-notes">Relevant coursework: Software Engineering, Databases, Networks, Cloud Computing, HCI.</p>
         <ul class="bullets">
-          <li>GPA: [Your GPA]</li>
-          <li>Awards: [Scholarships/Dean’s List]</li>
+          <li>GPA: 73</li>
+          <li>Awards: Merit Award</li>
         </ul>
       </article>
     </section>
