--- a/profile/index.html
+++ b/profile/index.html
@@ -29,14 +29,13 @@
   <main class="container">
     <section>
       <h2>Profile</h2>
-      <p id="summary">[Write a concise 2–3 sentence summary highlighting your interests, strengths, and goals.]</p>
+      <p id="summary">A motivated Bachelor of information Technology student at Nelson Mandela University with a strong academic grounding and hands-on experience in software development, web application, mobile development and data analysis. Passionate about solving real-world problems through technology.</p>
     </section>
 
     <section>
       <h2>Skills</h2>
       <ul class="skill-list" id="skills">
         <li>Java</li>
-        <li>Python</li>
         <li>Web Development (HTML, CSS, JavaScript)</li>
         <li>SQL</li>
         <li>Data Structures & Algorithms</li>
@@ -64,10 +63,10 @@
       <div class="cards" id="projects">
         <article class="card">
           <div class="card-header">
-            <h3>Project Name</h3>
-            <span class="meta">[Tech: React, Node, PostgreSQL]</span>
+            <h3>Online Banking system</h3>
+            <span class="meta">[Tech: React, Node, MySQL]</span>
           </div>
-          <p>One-line impact statement explaining what it does and your contribution.</p>
+          <p>This project helps clients to deposit, withdraw and do any other banking activites on the system.</p>
           <ul class="bullets">
             <li>Implemented [feature] improving [metric] by [X%].</li>
             <li>Deployed on [platform]; wrote tests achieving [coverage %].</li>
@@ -80,32 +79,20 @@
       </div>
     </section>
 
-    <section>
-      <h2>Experience</h2>
-      <article class="item">
-        <div class="item-header">
-          <h3>[Role], [Company]</h3>
-          <span class="meta"><time>Jun 2024</time> – <time>Aug 2024</time> · Internship</span>
-        </div>
-        <ul class="bullets">
-          <li>Did X using Y to achieve Z.</li>
-          <li>Collaborated with N teammates using Agile/Scrum.</li>
-        </ul>
-      </article>
-    </section>
+  
 
     <section>
       <h2>Achievements</h2>
       <ul class="bullets" id="achievements">
-        <li>Hackathon Winner – [Event], [Year]</li>
-        <li>Certification – [Name], [Year]</li>
+      
+        <li>Certification – Cisco Cybersecurity, 2022</li>
       </ul>
     </section>
 
     <section>
       <h2>Extracurricular</h2>
       <ul class="bullets" id="extracurricular">
-        <li>Role – Club/Community – [Year]</li>
+        <li>Role – Club/Community – 2024</li>
       </ul>
     </section>
   </main>
